messaging_app/messaging_app/blue_deployment.yaml
# messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
        - name: messaging-app
          image: your-dockerhub-username/messaging-app:2.0   # <-- updated
          ports:
            - containerPort: 8000
