messaging_app/messaging_app/kubeservice.yaml
# messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app
    version: blue   # Initially points to blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
